# chip8-emulator

./: CMakeLists.txt  README.md
include/: chip8.h  log.h
src/: chip8.cpp  log.cpp  main.cpp
